All the other steps

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -7,5 +7,15 @@ jobs:
     runs-on: ubuntu-latest      # Sets the build environment a machine with the latest Ubuntu installed
     steps:
     - uses: actions/checkout@v2 # Adds a step to checkout the repository code
-    - name: List stuff
-      run: ls -a
+    - name: Build C# code
+      run: dotnet build
+    - name: Run C# tests
+      run: dotnet test
+    - name: NPM Install
+      run: cd ./DotnetTemplate.Web && npm install
+    - name: Build TS code
+      run: npm run build
+    - name: Lint TS code
+      run: npm run lint
+    - name: Run TS tests
+      run: npm t
